# test

./: .gitignore  .gitmodules  README.md
.github/workflows/: build_beta_in_windows.yml  build_beta_in_windows_Win32.yml  build_master_in_windows.yml  msys_build_test.yml  unix_build_test.yml  vs_build_test.yml
cmake/: CMakeLists.txt  build_utils_VERSION.cmake  set_variables.cmake  unset_variables.cmake
cmake/build_utils/add_test_executable_dir/: get_target_dir.cmake  get_target_name.cmake
doc/fmt/: integer.ods
include/: Test.h
include/test/: Argument.h  Base.h  Byte.h  CString.h  Case.h  FloatingPoint.h  Forward.h  Guard.h  Memory.h  Message.h  Node.h  Output.h  Pointer.h  Queue.h  Register.h  Stack.h  Status.h  System.h  Trace.h  Value.h  Variable.h
include/test/arg/: Block.h  Flag.h  Header.h  Structure.h  Type.h  Value.h
include/test/arg/val/: Const.h
include/test/bit/index/: Big.h
include/test/byte/: Base.h  Iterator.h  Offset.h  Operator.h  Order.h  Resize.h  Sequence.h
include/test/byte/it/: Operator.h
include/test/byte/off/: Make.h
include/test/byte/order/: BigEndian.h  LittleEndian.h
include/test/byte/order/op/: BigEndian.h  LittleEndian.h
include/test/byte/seq/: First.h  Last.h
include/test/cstr/: Format.h  Forward.h  Length.h
include/test/cstr/fmt/: Time.h
include/test/def/cstr/val/: Boolean.h  Empty.h  Nullptr.h  Space.h  Zero.h
include/test/def/type/: Name.h
include/test/fp/: Base.h  Format.h  Number.h
include/test/fp/fmt/: Definition.h
include/test/integer/: Flag.h  Format.h  Raw.h
include/test/integer/fmt/: Cast.h  Conversion.h  Definition.h  Element.h  Make.h
include/test/math/: Exponential.h  Logarithm.h  NaturalLogarithm.h
include/test/math/integer/: Addition.h  Comparison.h  Division.h  Logarithm.h  Multiplication.h  Negation.h  Shift.h  Subtraction.h
include/test/mem/: Block.h
include/test/msg/: Argument.h  Base.h  Case.h  Format.h  Tag.h
include/test/msg/arg/: Value.h
include/test/msg/fmt/: Base.h  Parameter.h  Status.h
include/test/node/: Data.h  Link.h
include/test/ptr/: Base.h  Block.h  Default.h  Definition.h  Flag.h  Iterator.h  Reference.h
include/test/ptr/arg/: Array.h  Foreach.h
include/test/ptr/block/: Header.h
include/test/ptr/defn/: Finalization.h
include/test/reg/: Base.h
include/test/sys/: Debug.decl.h  Debug.defn.h  Debug.h  Definition.h  Definition.impl.h  Interface.h  Log.h  Memory.h  Memory.impl.h  Signal.defn.h  Signal.h  Signals.defn.h  Signals.h  Status.h
include/test/sys/dbg/: CStr.h  Function.h  Namespace.h  Type.defn.h  Type.h  Value.h
include/test/sys/mem/: Block.h  Dummy.h  Pointer.decl.h  Pointer.defn.h  Pointer.h  Record.h
include/test/trait/byte/: IsBaseOf.h
include/test/trait/cstr/: Enable.h  IsBaseOf.h
include/test/type/: Function.h  Index.h  Name.h  Parameter.h  Value.h
include/test/type/name/: Array.h  Declarator.decl.h  Declarator.h  Function.h  Parameter.h  Pointer.h  Qualifier.h  Reference.h  Template.h  Value.h
include/test/type/param/: Element.h  Filler.h  Function.h  Name.h  Size.h
include/test/type/val/: Sequence.h
include/test/val/: Function.h  Parameter.h  Sequence.h
include/test/var/: At.h  Definition.h  Element.h  Has.h  Value.h
include/test/var/type/: Function.h  Value.h
include/test/var/val/: Function.h  Parameter.h  Sequence.h
test/: Argument.main.cpp  Base.main.cpp  Byte.main.cpp  CString.main.cpp  Case.main.cpp  FloatingPoint.main.cpp  Guard.main.cpp  Message.main.cpp  Node.main.cpp  Pointer.main.cpp  Queue.main.cpp  Register.main.cpp  Stack.main.cpp  System.main.cpp  Value.main.cpp  Variable.main.cpp
test/arg/: Block.main.cpp  Flag.main.cpp  Header.main.cpp  Structure.main.cpp  Type.main.cpp  Value.main.cpp
test/arg/val/: Const.main.cpp
test/cstr/: Format.main.cpp
test/def/type/: Name.main.cpp
test/integer/: Flag.main.cpp  Raw.main.cpp
test/integer/fmt/: Definition.main.cpp  Make.base2.main.cpp
test/math/: Exponential.main.cpp  Logarithm.main.cpp  NaturalLogarithm.main.cpp
test/math/integer/: Addition.main.cpp  Comparison.main.cpp  Division.main.cpp  Format.test.h  Logarithm.main.cpp  Multiplication.main.cpp  Negation.main.cpp  Shift.main.cpp  Subtraction.main.cpp
test/math/integer/fmt/: Trait.main.cpp
test/msg/: Argument.main.cpp  Base.main.cpp  Case.main.cpp  Format.main.cpp
test/msg/arg/: Value.main.cpp
test/msg/arg/type/: Function.main.cpp  Index.main.cpp  Name.main.cpp  Value.main.cpp
test/msg/arg/val/: Function.main.cpp  Parameter.main.cpp  Sequence.main.cpp
test/msg/fmt/: Base.main.cpp  Parameter.main.cpp  Status.main.cpp
test/msg/fmt/param/: Character.main.cpp  FloatingPoint.main.cpp  Integer.main.cpp  Nothing.main.cpp  Pointer.main.cpp  Precision.main.cpp  String.main.cpp  Width.main.cpp
test/msg/fmt/val/: Precision.main.cpp  Status.main.cpp  Width.main.cpp
test/msg/fmt/var/: Character.main.cpp  FloatingPoint.main.cpp  Integer.main.cpp  Nothing.main.cpp  Pointer.main.cpp  String.main.cpp
test/node/: Data.main.cpp  Link.main.cpp
test/ptr/: Base.main.cpp  Block.main.cpp  Iterator.main.cpp  Reference.main.cpp
test/sys/: Definition.main.cpp  Log.main.cpp  Signal.main.cpp  Signals.main.cpp  Status.main.cpp
test/type/: Function.main.cpp  Index.main.cpp  Name.main.cpp  Parameter.main.cpp  Value.main.cpp
test/type/name/: Array.main.cpp  Declarator.main.cpp  Function.main.cpp  Parameter.main.cpp  Pointer.main.cpp  Qualifier.main.cpp  Reference.main.cpp  Template.main.cpp  Value.main.cpp
test/type/name/decltor/: Parameter.main.cpp
test/type/param/: Element.main.cpp  Filler.main.cpp  Function.main.cpp  Name.main.cpp  Size.main.cpp
test/type/param/mmbr/: Function.main.cpp
test/type/val/: Sequence.main.cpp
test/type/val/seq/: Make.main.cpp
test/val/: Function.main.cpp  Parameter.main.cpp  Sequence.main.cpp
test/var/: At.main.cpp  Definition.main.cpp  Element.main.cpp  Has.main.cpp  Value.main.cpp
test/var/type/: Function.main.cpp  Value.main.cpp
test/var/type/val/: Sequence.main.cpp
test/var/val/: Function.main.cpp  Parameter.main.cpp  Sequence.main.cpp
(+201 files in other folders)
